<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Umb_project</string>

    <!-- Umb_Main.xml -->
    <string name="tvUser2_text">님</string>
    <string name="tvPoint1_text">포인트:</string>
    <string name="btnMypage_text">마이페이지</string>
    <string name="btnBoard">공유게시판</string>
    <string name="btnLogout_text">로그아웃</string>

    <!-- Umb_Login.xml -->
    <string name="tvText_text">Um-Cycle</string>
    <string name="edtId_hint">아이디</string>
    <string name="edtPw_hint">비밀번호</string>
    <string name="btnJoin_text">회원가입</string>
    <string name="btnLogin_text">로그인</string>
    <string name="auto_text">자동 로그인</string>

    <!-- Umb_Join.xml -->
    <string name="edtJoinId_hint">아이디를 입력하시오</string>
    <string name="edtJoinPw_hint">비밀번호를 입력하시오</string>
    <string name="edtJoinName_hint">이름을 입력하시오</string>
    <string name="edtJoinNick_hint">닉네임을 입력하시오</string>
    <string name="edtJoinEmail_hint">이메일을 입력하시오</string>
    <string name="edtJoinPhone_hint">전화번호를 입력하시오</string>
    <string name="edtJoinAddr_hint">주소를 입력하시오</string>
    <string name="btnSuccess_text">회원가입</string>

    <!-- Umb_Mypage.xml -->
    <string name="tvMypage_text">마이페이지</string>
    <string name="userId_text">아이디</string>
    <string name="userName_text">이름</string>
    <string name="userPw_text">패스워드</string>
    <string name="userNick_text">닉네임</string>
    <string name="userEmail_text">이메일</string>
    <string name="userPhone_text">전화번호</string>
    <string name="userJoindate_text">가입일자</string>
    <string name="userAddr_text">주소</string>
    <string name="userType_text">유형</string>
    <string name="userStatus_text">상태</string>
    <string name="userPoint_text">포인트</string>
    <string name="btnUtpage">수정페이지</string>

    <!-- Umb_update.xml -->
    <string name="tvUpdate">내 정보 수정하기</string>
    <string name="ChPw">새 비밀번호</string>
    <string name="ChNick">새 닉네임</string>
    <string name="ChEmail">새 이메일</string>
    <string name="ChAddr">새 주소</string>
    <string name="btnUpdate">수정하기</string>

    <!-- UmbBoard.xml -->
    <string name="tvBoardTitle">공유 게시판</string>
    <string name="btnItContent">글작성</string>
    <string name="btnCmt">댓글달기</string>

    <!-- UmbCommunity.xml -->
    <string name="tvCommunity">공유 게시판</string>
    <string name="tvTitle">제목</string>
    <string name="tvWriter">작성자</string>
    <string name="tvContent">내용</string>
    <string name="btnSave">등록</string>
    <string name="btnCancel">취소</string>

    <!-- UmbCmtInsert.xml -->
    <string name="btnInsert">댓글 등록</string>



</resources>